# pubsub-dataflow-bigquery

./: README.md  pyproject.toml
aws/: template.yaml
aws/lambda/: publisher.py
dataflow/: Dockerfile  start_streaming.sh  taxirides-realtime-duplicated.py  taxirides_realtime.py  taxirides_realtime_duplicated.py  taxirides_realtime_window.py
dataflow/schema/: taxirides_realtime_error
gcp/: Dockerfile  setup.sh  start_streaming.sh  taxirides-realtime.py
gcp/dataflow/: start_streaming.sh  taxirides-realtime-duplicated.py  taxirides-realtime.py
gcp/dataflow/schema/: taxirides_realtime
gcp/src/: taxirides-realtime.py
tests/dataflow/: test_taxirides_realtime.py  test_taxirides_realtime_window.py
